Added block resize a vertical y maxlength

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <label for="product">Add product :</label>
                     <form  id="formulario">
                             <label for="product"></label>
-                            <textarea id="product" class="u-full-width"></textarea>
+                            <textarea id="product" class="u-full-width" style="resize: vertical;" maxlength="25"></textarea>
                             <input type="submit" class="button u-full-width button-primary" value="Agregar">
                     </form>
                 </div>
